# Quotes-site-django

./: .gitignore  pyproject.toml
quotes/: settings.py
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: forms.py  urls.py  views.py
quotes/quotesapp/migrations/: 0002_alter_quote_author_alter_quote_quote.py
quotes/quotesapp/templates/quotesapp/: author.html  author_detail.html  index.html
quotes/quotesapp/templatetags/: extract_authors.py
quotes/users/: forms.py  views.py
quotes/users/migrations/: 0001_initial.py
quotesapp/: models.py  urls.py  views.py
quotesapp/migrations/: 0001_initial.py
quotesapp/templates/quotesapp/: author_detail.html  base.html  detail.html  index.html  quote.html
quotesapp/templatetags/: extract_authors.py
users/: views.py
