[tool.poetry]
name = "django-hw"
version = "0.1.0"
description = ""
authors = ["Impe11e <1mpellee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
psycopg2 = "^2.9.10"
pillow = "^11.1.0"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
